--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@ body {
   background-color: #000;
   color: white;
   margin: 0;
-  overflow: hidden;
   -webkit-font-smoothing: antialiased;
   user-select: none;
   touch-action: manipulation;
@@ -17,9 +16,9 @@ body {
   background: rgba(255, 255, 255, 0.03);
   backdrop-filter: blur(60px) saturate(210%) brightness(110%);
   -webkit-backdrop-filter: blur(60px) saturate(210%) brightness(110%);
-  
+
   /* Многослойные тени для имитации грани алмаза */
-  box-shadow: 
+  box-shadow:
     inset 0 0 0 1px rgba(255, 255, 255, 0.12),
     inset 0 1.5px 2px 0 rgba(255, 255, 255, 0.3), /* Верхний блик */
     0 30px 60px -12px rgba(0, 0, 0, 0.7);
@@ -38,9 +37,9 @@ body {
   height: 200%;
   top: -50%;
   left: -50%;
-  background-image: 
-    radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
-    radial-gradient(at 50% 0%, var(--primary-color) 0, transparent 50%), 
+  background-image:
+    radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%),
+    radial-gradient(at 50% 0%, var(--primary-color) 0, transparent 50%),
     radial-gradient(at 100% 0%, hsla(339,49%,30%,1) 0, transparent 50%),
     radial-gradient(at 0% 100%, var(--primary-color) 0, transparent 50%);
   filter: blur(80px);
@@ -159,7 +158,7 @@ input[type=range] {
 input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   /* Для громкости мы скрываем стандартный ползунок, так как сделали кастомный дизайн */
-  width: 0; 
+  width: 0;
   height: 0;
 }
 
